--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "monster-rolodex",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://github.com/kishankanejiya/monster-rolodex.git",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -15,7 +16,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
